# test_build_quickjs_on_windows

./: Cargo.toml
.github/workflows/: test.yml
