[package]
name = "test_build_quickjs_on_windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(any(unix, all(windows, target_env = "gnu")))'.dependencies]
katex = "0.4"

[target.'cfg(not(any(unix, all(windows, target_env = "gnu"))))'.dependencies]
katex = { version = "0.4", default-features = false, features = ["duktape"] }
